--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,17 @@ on:
     paths:
       - 'package.json'
 jobs:
-  any-job:
+  deploy-to-stage:
     runs-on: ubuntu-latest
     steps: 
-      - name: any-step
+      - name: Check for version change
+        id: version_changed
+        uses: EndBug/version-check@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          diff-search: true # Search for changes in the last commit
+
+      - name: hello-world
         run: echo "Hello World"
         
       
